# rogue3.6

./: LICENSE  Makefile  Makefile.ac  Makefile.am  Makefile.in  Makefile.xcu  armor.c  chase.c  command.c  config-xsh.h  config.h.in  configure  configure.ac  daemon.c  daemons.c  fight.c  findpw.c  init.c  io.c  list.c  mach_dep.h  main.c  mdport.c  mdport.h  misc.c  monsters.c  move.c  new_level.c  options.c  pack.c  passages.c  potions.c  rings.c  rip.c  rogue.cat  rogue.doc  rogue.h  rogue.r  rooms.c  save.c  (+8 more)
